--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+    <main>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>landing-page</title>
+    <title>Hericium Erinaceus</title>
+    <div class="img-div"></div>
 </head>
 <body>
-    
+    <p>labas rytas</p>
 </body>
+</main>
 </html>
