--- a/index.html
+++ b/index.html
@@ -1,14 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-    <main>
+   
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style-landing-page.css">
     <title>Hericium Erinaceus</title>
-    <div class="img-div"></div>
+     
 </head>
 <body>
-    <p>labas rytas</p>
+    <main id="main"> 
+        <h1 id="title">Hericium mushroom</h1>
+        <div id="img-div">
+            <img id="image" src="https://www.mushroomexpert.com/images/kuo2/hericium_erinaceus_01.jpg" alt="med mushrooms">
+            <p id="img-caption"> Nootropics </p>
+        </div>
+        <p id="tribute-info">Here goes all the good <a id="tribute-link" href="#" target="_blank">info</a> about this mushroom</p>
+    </main>
 </body>
-</main>
+
 </html>
